Fix scroll issue
Mobile screenspace too small for my liking. Will collapse toolbars in
the future.

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -4,4 +4,4 @@
   height: 100%;
 
 .outlet
-  flex: 1 0;
+  flex: 1 0 auto;
