--- a/src/app/sidenav/sidenav.component.sass
+++ b/src/app/sidenav/sidenav.component.sass
@@ -9,7 +9,7 @@
 .sidenav .mat-toolbar
   background: inherit;
 
-.mat-toolbar.mat-primary
+.header-toolbar
   position: sticky;
   top: 0;
   z-index: 1;
@@ -20,7 +20,9 @@
 
   .page-content
     flex: 1 1 auto;
-    margin: 16px;
+    height: 1px; // Otherwise it will force the footer off the page.
+    padding: 16px;
+    overflow: auto;
 
 $accent: map-get($my-app-theme, accent);
 .link-list
