--- a/src/theme.sass
+++ b/src/theme.sass
@@ -25,6 +25,7 @@ $my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 html, body
   height: 100%;
+  overflow-y: hidden;
 
 body
   margin: 0;
